crates/codegen/language/tests/src/fail/parsing/unrecognized_field/test.stderr
error: unexpected token
  --> src/fail/parsing/unrecognized_field/test.rs:18:13
   |
18 |             unrecognized_field = true
   |             ^^^^^^^^^^^^^^^^^^
